# event-driven-library

./: Cargo.toml
example1/: Cargo.toml  aggregate.rs  handler.rs  repository.rs
example1/src/: aggregate.rs  executor.rs  handler.rs  main.rs
ruva-build/: Cargo.toml
ruva-build/src/: lib.rs  main.rs
