[package]
name = "example1"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Ruva Framework Example"
repository = "https://github.com/BeringLab/ruva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruva = { version = "0.1.52", path = "../" }
tokio = { version = "1.0.0", features = ["full"] }
