[package]
name = "example1"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Ruva Framework Example"
repository = "https://github.com/BeringLab/ruva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["postgres"] }
ruva = { path = "../" }
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.0.0", features = ["full"] }
